BUG: fixed the mail icon out of place bug

--- a/style-sheets/top-bar.scss
+++ b/style-sheets/top-bar.scss
@@ -108,8 +108,8 @@
 
 #button {
   display: block;
-  height: 30px;
-  width: 30px;
+  height: 35px;
+  width: 35px;
 }
 
 #button label span {
