--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@
 /* ids */
 #button {
   display: block;
-  height: 30px;
-  width: 30px;
+  height: 35px;
+  width: 35px;
 }
 
 #button label span {
